testsuite/typechecking/compile-fail/invalid-field-write.verona
// Copyright Microsoft and Project Verona Contributors.
// SPDX-License-Identifier: MIT
class A { }
class Cell { value: A & iso; }

class Main
{
  write_to_imm(cell: Cell & imm) {
    // CHECK-L: invalid-field-write.verona:${LINE:+1}:5: error: Type '(Cell & imm(none))' is not writable
    cell.value = new A;
  }

  write_to_union(cell: Cell & (imm | mut)) {
    // CHECK-L: invalid-field-write.verona:${LINE:+1}:5: error: Type '((Cell & imm(none)) | (Cell & mut(external 0)))' is not writable
    cell.value = new A;
  }

  write_to_missing_capability(cell: Cell) {
    // CHECK-L: invalid-field-write.verona:${LINE:+1}:5: error: Type 'Cell' is not writable
    cell.value = new A;
  }

  main() { }
}
